🚀 feat(images): add new wide version of "ready-to-find-your-role" image 🐛 fix(KeepExploring.tsx): update image source to use the new wide version of "ready-to-find-your-role" image 🐛 fix(_resultsPage.scss): remove commented out code and adjust z-index of elements

--- a/src/styles/layouts/_resultsPage.scss
+++ b/src/styles/layouts/_resultsPage.scss
@@ -193,11 +193,8 @@
         box-shadow: clamp(0.25rem, 1vw, 0.5rem) clamp(0.25rem, 1vw, 0.5rem) 0 var(--c-shadow3);
         overflow: hidden;
 
-        // align-items: center;
-
         figure {
           width: clamp(15rem, 20vw, 20rem);
-          // height: clamp(tokens.$size-10 * 2, 8vw, tokens.$size-10 * 5);
           height: 100%;
           min-height: 15rem;
           flex: 1 0;
@@ -293,16 +290,38 @@
       transform: translate(-50%, -50%);
       z-index: tokens.$layer-0;
 
-      &::after {
+      &::before {
         content: "";
         display: block;
         width: 100%;
         height: 100%;
         background: var(--c-bg13);
         position: absolute;
+        z-index: tokens.$layer-2;
         left: 0;
         top: 0;
         opacity: 0.95;
+      }
+      img {
+        z-index: tokens.$layer-1;
+      }
+
+      &::after {
+        content: "";
+        display: block;
+        font-size: clamp(tokens.$size-8, 8vw, tokens.$size-10);
+        width: 0.8em;
+        height: 4.2em;
+        background: url("/images/appily-vector-shapes.svg") no-repeat center;
+        background-size: contain;
+        position: absolute;
+        z-index: tokens.$layer-3;
+        right: 0;
+        bottom: -20%;
+
+        @media (max-width: tokens.$mq-900) {
+          display: none;
+        }
       }
     }
 
